# dotenv-linter-plus

./: .env.example  .env.schema.json  README.md  README.ru.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/dotenv_linter_plus/: __init__.py  cli.py  linting.py
tests/: test_cli.py  test_linting.py
