[project]
name = "dotenv-linter-plus"
version = "0.1.0"
requires-python = ">=3.10"
description = "Schema-aware .env validator with CI-friendly JSON output"

[project.scripts]
dotenv-linter-plus = "dotenv_linter_plus.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
