[project]
name = "dotenv-linter-plus"
version = "0.1.0"
requires-python = ">=3.10"
description = "Schema-aware .env validator with CI-friendly JSON output"

[project.scripts]
dotenv-linter-plus = "dotenv_linter_plus.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

